--- a/src/main/resources/templates/person/add.html
+++ b/src/main/resources/templates/person/add.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layouts/mainLayout}">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Dodaj użytkownika</title>
 </head>
 <body>
 
-<div>
+<section layout:fragment="custom-content">
     <h1>User Registration</h1>
     <form action="#" method="post" th:action="@{/person/save}" th:object="${person}">
         <label for="id">Id:</label>
-        <input id="id" th:field="*{id}" type="text"/><br/>
+        <input class="form-control" id="id" th:field="*{id}" type="text"/><br/>
 
         <label for="username">Full name:</label>
-        <input id="username" th:field="*{username}" type="text"/><br/>
+        <input class="form-control" id="username" th:field="*{username}" type="text"/><br/>
 
         <label for="email">E-mail:</label>
-        <input id="email" th:field="*{email}" type="text"/><br/>
+        <input class="form-control" id="email" th:field="*{email}" type="text"/><br/>
 
-        <button type="submit">Register</button>
+        <button type="submit" class="btn btn-primary">Register</button>
     </form>
-</div>
+</section>
 
 </body>
 </html>
