--- a/src/main/resources/templates/person/list.html
+++ b/src/main/resources/templates/person/list.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layouts/mainLayout}">
+
 <head>
     <meta charset="UTF-8">
     <title>Lista użytkowników</title>
 </head>
 <body>
-<table>
-    <thead>
-    <tr>
-        <th>id</th>
-        <th>username</th>
-        <th>email</th>
-        <th>enabled</th>
-        <th>role</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="person: ${people}">
-        <td th:text="${person.id}"></td>
-        <td th:text="${person.username}"></td>
-        <td th:text="${person.email}"></td>
-        <td th:text="${person.enabled}"></td>
-        <td th:text="${person.role}"></td>
-    </tr>
-    </tbody>
-</table>
+
+<section layout:fragment="custom-content">
+    <table style="margin: 30px 0px;" class="table">
+        <thead>
+        <tr>
+            <th>id</th>
+            <th>username</th>
+            <th>email</th>
+            <th>enabled</th>
+            <th>role</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="person: ${people}">
+            <td th:text="${person.id}"></td>
+            <td th:text="${person.username}"></td>
+            <td th:text="${person.email}"></td>
+            <td th:text="${person.enabled}"></td>
+            <td th:text="${person.role}"></td>
+        </tr>
+        </tbody>
+    </table>
+</section>
+
 </body>
 </html>
