--- a/src/main/resources/templates/person/show.html
+++ b/src/main/resources/templates/person/show.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layouts/mainLayout}">
+
 <head>
     <meta charset="UTF-8">
     <title>Szczegóły użytkownika</title>
 </head>
 <body>
-szczegóły użytkownika;
 
-<p>
-    Id: <span th:text="${person.id}"></span>
-</p>
-<p>
-    Username: <span th:text="${person.username}"></span><br/>
-    Email: <span th:text="${person.email}"></span><br/>
-    Enabled: <span th:text="${person.enabled}"></span><br/>
-    Role: <span th:text="${person.role}"></span><br/>
-</p>
+<section layout:fragment="custom-content">
+Szczegóły użytkownika;
+
+    <p>
+        Id: <span th:text="${person.id}"></span>
+    </p>
+    <p>
+        Username: <span th:text="${person.username}"></span><br/>
+        Email: <span th:text="${person.email}"></span><br/>
+        Enabled: <span th:text="${person.enabled}"></span><br/>
+        Role: <span th:text="${person.role}"></span><br/>
+    </p>
+</section>
+
 </body>
 </html>
