--- a/src/main/resources/templates/person/add.html
+++ b/src/main/resources/templates/person/add.html
@@ -7,18 +7,18 @@
 <body>
 
 <section layout:fragment="custom-content">
-    <h1>User Registration</h1>
+    <h1 th:text="#{person.userregistation}">User Registration</h1>
     <form action="#" method="post" th:action="@{/person/save}" th:object="${person}">
         <label for="id">Id:</label>
         <input class="form-control" id="id" th:field="*{id}" type="text"/><br/>
 
-        <label for="username">Full name:</label>
+        <label for="username" th:text="#{person.fullname}">Full name:</label>
         <input class="form-control" id="username" th:field="*{username}" type="text"/><br/>
 
         <label for="email">E-mail:</label>
         <input class="form-control" id="email" th:field="*{email}" type="text"/><br/>
 
-        <button type="submit" class="btn btn-primary">Register</button>
+        <button type="submit" class="btn btn-primary" th:text="#{person.register}">Register</button>
     </form>
 </section>
 
